Change the method